04-ingress/hr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-service
  namespace: networking-lab
spec:
  type: ClusterIP
  selector:
    app: hr-portal
  ports:
  - port: 80
    targetPort: 80
