04-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company-ingress
  namespace: networking-lab
spec:
  rules:
  - host: hr.company.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hr-service
            port:
              number: 80
  - host: finance.company.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-service
            port:
              number: 80
